# DiversIA-Web

./: .env.example  .replit  AI_AGENT_ARCHITECTURE.md  ASIGNACION_TAREAS_COMPLETADA.md  CHECKLIST_CRM_COMPLETO.md  CHECKLIST_VERIFICACION.md  CONFIGURACION_N8N_FACIL.md  DEBUG_N8N_WEBHOOK.md  DEPLOYMENT_GUIDE.md  DESPLIEGUE_VERCEL.md  DIAGNOSTICO_N8N_INTERMITENTE.md  GITHUB_UPDATE_SUMMARY.md  GUIA_N8N_PASO_A_PASO.md  IMPLEMENTATION_STATUS.md  INSTRUCCIONES_GMAIL_CONTRASEÑA.md  Instructions.md  METRICOOL_N8N_TROUBLESHOOTING.md  MIGRATION_STEPS.md  N8N_CLOUD_SETUP.md  N8N_INTEGRATION_GUIDE.md  N8N_INTELLIGENT_AGENT_SETUP.md  N8N_WEBHOOK_SETUP.md  PROBLEMAS_SOLUCIONADOS_COMPLETAMENTE.md  README.md  SISTEMA_COMPLETAMENTE_FUNCIONAL.md  SOLUCION_FORMULARIOS_COMPLETA.md  SOLUCION_N8N_LOCALHOST.md  SOLUCION_PERSISTENCIA_DATOS.md  VERIFICACION_FINAL_N8N.md  VERIFICACION_N8N_COMPLETA.md  admin_auth.py  admin_auth_simple.py  admin_final.py  admin_simple.py  ai_agent_core.py  ai_matching_engine.py  ai_simplified.py  api_crm.py  api_crm_backup.py  api_crm_functional.py  (+93 more)
attached_assets/: Contactos Diversia - Hoja 2_1755857386342.csv  Diversia Chatbot_1755337253206.json  Email Marketing España - ENVIADOS_1755858935296.csv  Email Marketing España - ENVIADOS_1755860793507.csv  Email Marketing España - ENVIADOS_1755862352926.csv  Pasted--2025-09-06-11-25-29-0000-7305-INFO-Starting-gunicorn-23-0-0-2025-09-06-11-25-29-0000-730-1757157980765_1757157980766.txt  Pasted--Crea-las-paginas-de-Pol-tica-de-Privacidad-Aviso-Legal-T-rminos-y-Condiciones-y-que-puedan-abr-1755161456877_1755161456877.txt  (+10 more)
(+320 files in other folders)
